tests/snapshots/wallets/sign/missing_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - sign
    - wallet
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <DATA>

Usage: kermit wallets sign <WALLET_NAME> <DATA>

For more information, try '--help'.
