tests/snapshots/wallets/sign/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - wallets
    - sign
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <WALLET_NAME>
  <DATA>

Usage: kermit wallets sign <WALLET_NAME> <DATA>

For more information, try '--help'.
