tests/snapshots/wallets/sign/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - wallets
    - sign
    - foo
    - bdaf9dc514ce7d34b6474b8ca10a3dfb93ba997cb9d5ff1ea724ebe2af48abe5
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: foo not found
